Update optimize-solo-performance.md